# clap-rap

./: .env.example  README.md  licence.md  main.py  pfe_fr.md  pyproject.toml
documents/: list_of_rap_type_selected.md  pfe_en.md  rap_subtype_&_artists.md
src/: config.py
src/data_acquisition/: artist_discography.py  audio_fetcher.py  info.md  lyrics_fetcher.py
